examples/test/conf/HTTPRoute/Backend/Timeout/EdgionPlugins_default_timeout-debug.yaml
apiVersion: edgion.io/v1
kind: EdgionPlugins
metadata:
  name: timeout-debug
  namespace: edgion-default
spec: {}
