examples/test/conf/HTTPRoute/Backend/Timeout/Gateway.yaml
# Timeout  Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: timeout-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31140
