examples/test/conf/HTTPRoute/Backend/Timeout/HTTPRoute_default_timeout-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: timeout-backend
  namespace: edgion-default
spec:
  parentRefs:
    - name: timeout-gateway
      namespace: edgion-test
  hostnames:
    - "timeout-backend.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: timeout-debug
      timeouts:
        request: "5s"           # （）
        backendRequest: "1s"    # 
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
